--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "language",
     "grammar",
     "svelte",
-    "ide"
+    "ide",
+    "linter"
   ],
   "repository": "https://github.com/mlsvrts/svelte-atom",
   "license": "MIT",
